# Firmware-HealthHub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf  requirements.txt
.circleci/: config.yml
boards/arm/health_hub/: Kconfig.board  Kconfig.defconfig  board.cmake  health_hub.dts  health_hub.yaml  health_hub_defconfig
src/: main.c
